<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bookName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_black_dark_blue5_15"
                android:hint="@string/book_name"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/customerId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_black_dark_blue5_15"
                android:hint="@string/customer_id"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/customerName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_black_dark_blue5_15"
                android:hint="@string/customer_name"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobile1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_black_dark_blue5_15"
                android:hint="@string/mobile_1"
                android:inputType="number"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobile2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_black_dark_blue5_15"
                android:hint="@string/mobile_2_optional"
                android:inputType="number"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_black_dark_blue5_15"
                android:hint="Note (optional)"
                android:inputType="text"
                android:maxLines="2"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="15sp"
            android:layout_marginEnd="20sp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancelForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="18sp"
                android:background="@drawable/round_black_primary15"

                android:text="@string/cancel"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEditForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:background="@drawable/round_black_primary15"
                android:text="@string/update"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"

            android:textSize="16sp"
            android:visibility="invisible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            android:visibility="invisible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            android:visibility="invisible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            android:visibility="invisible" />
    </LinearLayout>
</ScrollView>